tobbar Copy right owner add

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
   <body class="">
     <!-- ! HEADER & NAV SECTION -->
     <header class="header" id="header">
+      <nav class="top-bar">
+        <p>
+          This product make for Work example ©
+          <a target="_blank" href="https://facebook.com/sifat.edit"
+            >Tarikul i.</a
+          >
+        </p>
+      </nav>
       <nav class="nav container">
         <a href="/" class="nav-brand"
           ><img src="./assets/logo.png" alt="logo"
