language select js config..

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       <nav class="top-bar">
         <p>
           This product make for Work example ©
-          <a target="_blank" href="https://facebook.com/sifat.edit"
+          <a
+            target="_blank"
+            href="https://www.upwork.com/freelancers/~016a3b72252769611b"
             >Tarikul i.</a
           >
         </p>
@@ -66,22 +68,26 @@
               <i class="fa-regular fa-circle-xmark"></i>
             </div>
           </div>
-          <div class="select-menu">
+          <div class="select-menu languages">
             <div class="select-btn">
               <div class="selected">
-                <img src="./assets/american-flag.png" alt="american-flag" />
-                <span class="option-text">EN-US</span>
+                <img
+                  class="selected-flag"
+                  src="./assets/american-flag.png"
+                  alt="american-flag"
+                />
+                <span class="selected-text">EN-US</span>
               </div>
               <i class="fa-solid fa-angle-down"></i>
             </div>
             <ul class="options">
               <li class="option">
-                <img src="./assets/american-flag.png" alt="american-flag" />
-                <span class="option-text">BANGLA</span>
+                <img src="./assets/american-flag.png " alt="american-flag" />
+                <span class="option-text">Bangla</span>
               </li>
               <li class="option">
                 <img src="./assets/american-flag.png" alt="american-flag" />
-                <span class="option-text">HINDI</span>
+                <span class="option-text">Hindi</span>
               </li>
               <li class="option">
                 <img src="./assets/american-flag.png" alt="american-flag" />
@@ -89,7 +95,7 @@
               </li>
               <li class="option">
                 <img src="./assets/american-flag.png" alt="american-flag" />
-                <span class="option-text">RUSSIAN</span>
+                <span class="option-text">Russian</span>
               </li>
             </ul>
           </div>
